samples/_failures_safe/1761367587_e67ac4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36bb281f.c: In function ‘main’:
./samples/SAFE/__tmp_36bb281f.c:160:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 |     char input_buffer
      |     ^~~~
./samples/SAFE/__tmp_36bb281f.c:160:5: error: expected declaration or statement at end of input
